http-server/base/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: http-server
spec:
  replicas: 1
  template:
    spec:
      containers:
        - name: http-server
          image: gcr.io/com-seankhliao/http-server:latest
          args:
            - /serve
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: httpserve
              mountPath: /serve
      volumes:
        - name: httpserve
          configMap:
            name: http-server-files
