http-server/base/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: http-server
spec:
  entryPoints:
    - web
    - websecure
  tls:
    secretName: tls-prod
  routes:
    - kind: Rule
      match: Host(`*`)
      priority: 1
      services:
        - name: http-server
          port: 80
